--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@
     display: inline-block;
     vertical-align: -14px;
 }
+body.safari .editor_ousupsub {
+    vertical-align: 0;
+}
 body.ie .editor_ousupsub {
     vertical-align: 26px;
 }
